# Shift-Allocation-From-Excel

./: README.md  pyproject.toml
.github/workflows/: ci.yml
shift_allocation_from_excel/: api.py  download.py  hooks.py  modules.txt  resume.py
shift_allocation_from_excel/public/js/: download_button.js  resume_button.js
shift_allocation_from_excel/shift_allocation_from_excel/doctype/shift_allocation_employees/: shift_allocation_employees.json  shift_allocation_employees.py
shift_allocation_from_excel/shift_allocation_from_excel/doctype/shift_allocation_tool/: shift_allocation_tool.js  shift_allocation_tool.json  shift_allocation_tool.py  test_shift_allocation_tool.py
