[project]
name = "shift_allocation_from_excel"
authors = [
    { name = "IBSL", email = "luckytamrakar.01@gmail.com"}
]
description = "Shift Allocation From excel "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0"  # Installed and managed by Bench.
    "PyPDF2>=3.0.1",   # for parsing PDF resumes
    "docx2txt>=0.8",
    "pdfplumber>=0.11.7" 
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
